# zed

./: Cargo.toml
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
crates/zed_vision_sync/: Cargo.toml
crates/zed_vision_sync/src/: lib.rs  service_manager.rs  status_button.rs  ui.rs
